--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:15
@@ -11,22 +9,13 @@ services:
       POSTGRES_DB: order
     ports:
       - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
 
   web:
-    build: ./app
+    build: .
     container_name: fastapi_app
     restart: always
     depends_on:
       - db
-    environment:
-      DATABASE_URL: postgresql://myuser:mypassword@db:5432/mydatabase
     ports:
       - "8000:8000"
-    volumes:
-      - ./app:/app
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
-
-volumes:
-  postgres_data:
